# mlopster

./: .gitignore  .markdownlintrc.json  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build_and_push_images.yml  precommit.yml  precommit_autoupdate.yml  release.yml
airflow/dags/: hello_world.py  sagemaker.py  test.py
airflow/docker/: Dockerfile  requirements.txt
mlflow/docker/: Dockerfile
resource_provisioning/airflow/docker/: Dockerfile
resource_provisioning/mlflow/docker/: Dockerfile
