[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mlopster"
version = "24.1-beta.1" # TODO should be autoupdated by dependabot
authors = [
    { name = "Drew Meyers", email = "drew.meyers@jpl.nasa.gov" },
]
description = "A multi-mission machine learning operations framework."
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[project.license]
text = "Apache-2.0"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/drewm-jpl/mlopster"

[project.optional-dependencies]
develop = []
test = [
    "python-dotenv==1.0.1",
    "pytest==8.2.2",
    "pytest-bdd==7.2.0",
    "pytest-mock==3.14.0",
    "requests==2.32.3",
    "apache-airflow==2.9.2",
    "kubernetes==30.1.0",
    "boto3==1.34.139",
    "backoff==2.2.1",
    "apache-airflow-providers-cncf-kubernetes==8.3.2"
]
analysis = [
    "ipython==8.26.0",
    "jupyterlab==4.2.3",
    "ipykernel==6.29.5",
    "notebook==7.2.1",
    "scikit-learn==1.5.0",
    "mlflow==2.14.1",
    "pandas==2.2.2"
]

[tool.setuptools.packages.find]
exclude = ["tests*"]
namespaces = false

[tool.isort]
line_length = 110

[tool.black]
line-length = 110

[tool.ruff]
line-length = 110

[tool.ruff.lint]
ignore = ["E501", "E402", "E731"]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']
